--- a/Android/MVVM_Template/app/src/main/res/layout/item_repo_list.xml
+++ b/Android/MVVM_Template/app/src/main/res/layout/item_repo_list.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorGrayLight"
-            android:text="@{viewModel.name}"/>
+            android:text="@{viewModel.userName}"/>
 
 
     </LinearLayout>
